# lab4-ros

src/lab4/: CMakeLists.txt  README.md  package.xml
src/lab4/launch/: move_between_objects.launch  two_objects_world.launch  wall_follower.launch
src/lab4/msg/: RobotStatus.msg
src/lab4/scripts/: camera_node.py  logger_node.py  move_between_objects.py  status_publisher.py  wall_follower.py
src/lab4/worlds/: two_objects.world
